2017-08-03  Sam Steingold  <sds@gnu.org>

	Fix bug#701: deftype does not check package lock.
	* clos-genfun2b.lisp (top-level-declarations): Extract from...
	(check-gf-declspecs): Use it.
	* condition.lisp (check-not-type): Call check-package-lock.
	(check-not-declaration): Call check-not-declaration,
	use top-level-declarations.
	* init.lisp (check-redefinition): Call check-package-lock even if
	no files are associated with the symbol.

2017-08-03  Sam Steingold  <sds@gnu.org>

	Fix bug#702: CLISP handles declarations inconsistently.
	* clos-genfun2b.lisp (+gf-declarations+): Remove.
	(check-gf-declspecs): Pass ERROR or WARN to ERRFUNC as appropriate
	and return the list of validated declarations.
	(shared-initialize-<standard-generic-function>): Use the return
	value of check-gf-declspecs as the declspecs slot.
	* clos-genfun3.lisp (analyze-defgeneric): Ditto.
	* constobj.d (declaration_types): Add DYNAMICALLY-MODIFIABLE.

2017-08-02  Sam Steingold  <sds@gnu.org>

	* clos-genfun2b.lisp, clos-genfun3.lisp, clos-genfun4.lisp:
	* clos-methcomb2.lisp, clos-method1.lisp, clos-method2.lisp:
	* clos-method3.lisp, defstruct.lisp, places.lisp: Use ("~?" fmt args)
	instead of ("~A" (apply #'format nil fmt args))
	for brevity, clarity and uniformity.

2017-08-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (gllib/libgnu.a): Depend on build-aux.

2017-07-31  Sam Steingold  <sds@gnu.org>

	Implement RFE#52: add (declare (dynamically-modifiable)).
	* clos-genfun1.lisp (generic-function): Add slot
	$DYNAMICALLY-MODIFIABLE.
	* clos-genfun2b.lisp (+gf-declarations+): New constant.
	(check-gf-declspecs): Use it.
	(std-add-method): Use GF-DYNAMICALLY-MODIFIABLE instead of
	*DYNAMICALLY-MODIFIABLE-GENERIC-FUNCTION-NAMES* to disable warnings.
	(gf-set-dynamically-modifiable): New function.
	(initialize-instance-<generic-function>)
	(reinitialize-instance-<generic-function>): Use it.
	(*dynamically-modifiable-generic-function-names*): Remove.